# template-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  bitbucket-pipelines.yml  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: python-build.yml
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/tests/unit/: test_example.py
